--- a/src/public_html/index.html
+++ b/src/public_html/index.html
@@ -1,1 +1,21 @@
-<h1><a href="register.html">Register</a></h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <title>NodeJs chat</title>
+    <link rel="stylesheet" href="css/index.css">
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/index.js"></script>
+</head>
+
+<body>
+    <div class="center">
+        <div class="buttonArea">
+            <button class="buttons" id="register-button">Register</button>
+            <button class="buttons" id="sign-in-button">Sign in</button>
+        </div>
+    </div>
+</body>
+
+</html>
