--- a/src/public_html/index.html
+++ b/src/public_html/index.html
@@ -3,18 +3,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>NodeJs chat</title>
-    <link rel="stylesheet" href="css/index.css">
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/index.js"></script>
+    <title>Home | NodeJs chat</title>
 </head>
 
 <body>
-    <div class="center">
-        <div class="buttonArea">
-            <button class="buttons" id="register-button">Register</button>
-            <button class="buttons" id="sign-in-button">Sign in</button>
-        </div>
+    <div style="text-align: center">
+        <a href="/login">Login</button><br>
+        <a href="/register">Register</button>
     </div>
 </body>
 
