--- a/src/public_html/register.html
+++ b/src/public_html/register.html
@@ -1,31 +1,23 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Chat | Register</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <ul class="pages">
-    <li class="chat page">
-      <div class="chatArea">
-        <ul class="messages"></ul>
-      </div>
-      <input class="inputMessage" placeholder="Type here..."/>
-    </li>
-    <li class="login page">
-      <div class="form">
-        <h3 class="title">Detiles: </h3>
-        <input class="nameInput" type="text" placeholder="name" class="input" />
-        <input class="mailInput" type="text" placeholder="mail" class="input" />
-        <input class="usernameInput" type="text" placeholder="username" class="input" />
-        <input class="passwordInput" type="text" placeholder="password" class="input" />
-      </div>
-    </li>
-  </ul>
 
-  <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="/chat.js"></script>
+<head>
+    <meta charset="utf-8">
+    <title>Register | NodeJs chat</title>
+</head>
+
+<body>
+    <div style="text-align: center">
+      <input id="name" type="text" placeholder="name"><br><br>
+      <input id="mail" type="text" placeholder="mail"><br><br>
+      <input id="username" type="text" placeholder="username"><br><br>
+      <input id="password" type="text" placeholder="password"><br><br>
+      <button id="submit">submit</button><br><br>
+    </div>
+
+    <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/register.js"></script>
 </body>
+
 </html>
